# adventofcode

./: .gitignore
2019/: common.hpp
2020/: common.hpp
2021/: Cargo.toml
2022/: .pre-commit-config.yaml  pyproject.toml  setup.cfg
2022/advent_of_code/day01/: __init__.py
2022/advent_of_code/day02/: __init__.py
2022/advent_of_code/day03/: __init__.py
2022/advent_of_code/day04/: __init__.py
2022/advent_of_code/day05/: __init__.py
2022/advent_of_code/day06/: __init__.py
2022/advent_of_code/day07/: __init__.py
2022/advent_of_code/day08/: __init__.py
2022/advent_of_code/day09/: __init__.py
2022/advent_of_code/day10/: __init__.py
2022/advent_of_code/day11/: __init__.py
2022/advent_of_code/day12/: __init__.py
2022/advent_of_code/day13/: __init__.py
2022/advent_of_code/day14/: __init__.py
2022/advent_of_code/day15/: __init__.py
2022/advent_of_code/day16/: __init__.py
2022/advent_of_code/day17/: __init__.py
2022/advent_of_code/day18/: __init__.py
2022/advent_of_code/day20/: __init__.py
2022/advent_of_code/day21/: __init__.py
2022/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day17.py  test_day18.py  test_day20.py  test_day21.py
2024/: .gitignore
formatted_inputs/: day_1  day_1.inc  day_10.inc  day_13.inc  day_15.inc  day_15_.inc  day_15__.inc  day_15___.inc  day_17.inc  day_17_.inc  day_18.inc  day_18_.inc  day_2.inc  day_23.inc  (+9 more)
(+127 files in other folders)
